# yestary

./: readme.md
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
web/: Cargo.toml  index.html  style.css
web/src/: lib.rs  main.rs
