[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aargvark = "0.0.4"
loga = "0.1.5"
poem = { version = "1.3.57", features = ["static-files", "rustls"] }
taskmanager = "0.1.2"
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
