[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aargvark = { version = "0.0.4", features = ["serde_json"] }
loga = "0.1.5"
poem = { version = "1.3.57", features = ["static-files", "rustls"] }
taskmanager = "0.1.2"
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
shared = { path = "../shared" }
sequoia-openpgp = { version = "1.16.0", features = ["ed25519-dalek"] }
openpgp-card-pcsc = "0.3.1"
openpgp-card-sequoia = "0.1.3"
serde_json = "1.0.104"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
