[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
console_error_panic_hook = "0.1.7"
ezing = "0.2.1"
gloo = "0.9.0"
js-sys = "0.3.64"
lunk = { path = "../../linkos" }
reqwasm = "0.5.0"
rooting = { path = "../../rooting" }
rust-crypto = "0.2.36"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "DragEvent",
    "HtmlInputElement",
    "ReadableStreamDefaultReader",
] }
sequoia-openpgp = { version = "*", default-features = false, features = [
    "crypto-rust",
    "allow-experimental-crypto",
    "allow-variable-time-crypto",
] }
